<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Catalogue Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="overview">overview</string>
    <string name="date">date</string>
    <string name="image_url">http://image.tmdb.org/t/p/w92/</string>
    <string name="backdrop_url">http://image.tmdb.org/t/p/original</string>

    <string name="user_rating_movie">Rating: %1$s/10</string>

    <string name="release_date">Release Date : </string>
    <string name="success"> Success!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_overview">Overview</string>
    <string name="buy_ticket">Buy Ticket </string>
    <string name="avenger_content">Avenger</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="search">Search</string>
    <string name="input_title_movie">Input Title Movie</string>
    <string name="movie_search_result">Movie Search Result</string>
    <string name="title_activity_master">Catalogue Movie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="rizqi_aryansa">Rizqi Aryansa</string>
    <string name="rizqi_aryansa_studentpartner_com">rizqi.aryansa@studentpartner.com</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="upcoming">UPCOMING</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="movies_now_playing">Movies Now Playing</string>
    <string name="movies_upcoming">Movies Up Coming</string>
    <string name="movies_favorite">Movies Favorite</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>

    <string name="now_playing_day">Hari ini </string>
    <string name="release">release </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_first_run">app_first_run</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">Empty Favorit</string>
    <string name="daily_reminder">daily_reminder</string>
</resources>
