<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    style="@style/MatchParentWrapContent"
    android:layout_gravity="center"
    card_view:cardCornerRadius="@dimen/cardview_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        style="@style/MatchParentWrapContent"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_moview"
            android:layout_width="@dimen/width_detail_poster"
            android:layout_height="@dimen/height_detail_poster"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textStyle="bold"
                android:layout_toRightOf="@id/img_moview"
                android:layout_toEndOf="@id/img_moview"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/overview"
                android:layout_toRightOf="@id/img_moview"
                android:layout_toEndOf="@id/img_moview"
                android:layout_below="@id/tv_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_toRightOf="@id/img_moview"
                android:layout_toEndOf="@id/img_moview"
                android:layout_below="@id/tv_overview"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            style="@style/MatchParentWrapContent"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/img_moview"
            android:layout_toEndOf="@id/img_moview"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_detail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>