<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AllMatchParent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/MatchParentWrapContent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            style="@style/MatchParentWrapContent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/movie_poster_width_for_detail"
                android:layout_height="@dimen/movie_poster_height_for_detail"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:scaleType="fitXY" />

            <LinearLayout
                style="@style/MatchParentWrapContent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_title_left_padding"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/text_color_movie_overview"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    tools:text="@string/avenger_content"/>

                <include layout="@layout/rating_item" />

                <TextView
                    android:id="@+id/movie_user_rating"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detail_title_left_padding"
                    android:layout_marginBottom="@dimen/detail_title_left_padding"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/text_color_movie_overview"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    tools:text="@string/user_rating_movie"/>

                <TextView
                    android:id="@+id/movie_release_date"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_title_left_padding"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/text_color_movie_overview"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    tools:text="@string/release_date"/>

                <include layout="@layout/favorite_item" />

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        style="@style/MatchParentWrapContent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/overview"
            style="@style/AllWrapContent"
            android:text="@string/tv_overview"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider"
            style="@style/ViewDividerDetail" />

        <TextView
            android:id="@+id/movie_overview"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textColor="@color/text_color_movie_overview"
            android:textIsSelectable="true" />

    </LinearLayout>

    </LinearLayout>
</ScrollView>
